# agentic-rag-system

./: .env.example  .gitignore  Makefile  README.md  generator.py  ingest.py  main.py  ollama_client.py  pyproject.toml  reflector.py  requirements.txt  retriever.py  verifier.py
data/: knowledge.txt
docs/: 01-why-rag-still-matters.md  02-building-basic-rag.md  03-grounded-generation.md
src/basic_rag_agent/: __init__.py  cli.py  config.py  pipeline.py
src/basic_rag_agent/clients/: ollama.py
src/basic_rag_agent/services/: __init__.py  generation.py  ingest.py  reflection.py  retrieval.py  verification.py
