[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "basic-rag-agent"
version = "0.1.0"
description = "Reliability-aware local RAG CLI with verification and retry logic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
basic-rag-agent = "basic_rag_agent.cli:run_cli"

[tool.uv]
package = true

[tool.pyright]
include = ["src"]
